@@ -20,6 +20,9 @@
             "fig:test"  ["run" "-m" "figwheel.main" "-co" "test.cljs.edn" "-m" "delaunator-cljc.test-runner"]}
 
   :profiles {:dev {:dependencies [[com.bhauman/figwheel-main "0.2.3"]
-                                  [com.bhauman/rebel-readline-cljs "0.1.4"]]}})
+                                  [com.bhauman/rebel-readline-cljs "0.1.4"]
+                                  [com.clojure-goes-fast/clj-async-profiler "0.4.0"]]}}
+
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"])
 
 
